cloud-proxy/cmd/nft-meta/k8s/02-nft-meta.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nft-meta
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nft-meta
  template:
    metadata:
      labels:
        app: nft-meta
    spec:
      containers:
        - name: nft-meta
          # image: web3eye/nft-meta:latest
          image: coastlinesss/nft-meta:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: service-config
              mountPath: /etc/NFTMeta
      volumes:
        - name: service-config
          configMap:
            name: nft-meta-config
---
apiVersion: v1
kind: Service
metadata:
  name: nft-meta
spec:
  ports:
    - name: http
      port: 30100
      targetPort: 30100
    - name: grpc
      port: 30101
      targetPort: 30101
    - name: healthz
      port: 30102
      targetPort: 30102
  selector:
    app: nft-meta
